<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_nyokkey4_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shinji.eto@kobot.co.jp">shinjieto</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_trajectory_controller</depend>
  <depend>angles</depend>
  <depend>backward_ros</depend>
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>rsl</depend>
  <depend>tl_expected</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/ros2_nyokkey4_controller_plugin.xml"/>
  </export>
</package>
